Add the copy goal so jars are copied to lib.   To get maven to do this I had to remove the parent and add it back after the jars were created. Also added in the manifest under RUN Time - classpath.

--- a/build.properties
+++ b/build.properties
@@ -2,6 +2,23 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
+               OSGI-INF/za.co.ntier.twilio.models.TwilioModelFactory.xml,\
                OSGI-INF/za.co.ntier.twilio.process.TwilioProcessFactory.xml,\
-               OSGI-INF/za.co.ntier.twilio.models.TwilioModelFactory.xml
+               lib/commons-codec.jar,\
+               lib/commons-io.jar,\
+               lib/commons-logging.jar,\
+               lib/httpclient.jar,\
+               lib/httpcore.jar,\
+               lib/jackson-annotations.jar,\
+               lib/jackson-core.jar,\
+               lib/jackson-databind.jar,\
+               lib/jackson-dataformat-xml.jar,\
+               lib/jackson-datatype-jsr310.jar,\
+               lib/jjwt-api.jar,\
+               lib/jjwt-impl.jar,\
+               lib/jjwt-jackson.jar,\
+               lib/slf4j-api.jar,\
+               lib/stax2-api.jar,\
+               lib/twilio.jar,\
+               lib/woodstox-core.jar
 source.. = src/
