Send Mesibo messages

--- a/build.properties
+++ b/build.properties
@@ -20,5 +20,10 @@ bin.includes = META-INF/,\
                lib/slf4j-api.jar,\
                lib/stax2-api.jar,\
                lib/twilio.jar,\
-               lib/woodstox-core.jar
+               lib/woodstox-core.jar,\
+               lib/word-wrap.jar,\
+               lib/guava-mini.jar,\
+               bin/,\
+               lib/opencv.jar,\
+               lib/gson.jar
 source.. = src/
