--- a/.classpath
+++ b/.classpath
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/gson.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="src" path="src/"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging.jar"/>
@@ -17,8 +21,8 @@
 	<classpathentry exported="true" kind="lib" path="lib/stax2-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/twilio.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/woodstox-core.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src/"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-mini.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/word-wrap.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/opencv.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
