--- a/build.properties
+++ b/build.properties
@@ -25,5 +25,6 @@ bin.includes = META-INF/,\
                lib/guava-mini.jar,\
                bin/,\
                lib/opencv.jar,\
-               lib/gson.jar
+               lib/gson.jar,\
+               lib/javacpp.jar
 source.. = src/
