--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,12 @@
 									<groupId>org.openpnp</groupId>
 									<artifactId>opencv</artifactId>
 									<version>3.2.0-0</version>
-								</artifactItem>								
+								</artifactItem>		
+								<artifactItem>
+									 <groupId>org.bytedeco</groupId>
+   									 <artifactId>javacpp</artifactId>
+    								 <version>1.5.10</version> 
+								</artifactItem>							
 							</artifactItems>
 							<outputDirectory>lib</outputDirectory>
 							<stripVersion>true</stripVersion>
