--- a/pom.xml
+++ b/pom.xml
@@ -1,149 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<parent>
-		<groupId>org.idempiere</groupId>
-		<artifactId>org.idempiere.parent</artifactId>
-		<version>${revision}</version>
-		<relativePath>../idempiere/org.idempiere.parent/pom.xml</relativePath>
-	</parent>
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>za.co.ntier.twilio</groupId>
-	<artifactId>za.co.ntier.twilio</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+	<groupId>org.idempiere</groupId>
+	<artifactId>sub.parent</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>eclipse-plugin</packaging>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>validate</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>com.twilio.sdk</groupId>
-									<artifactId>twilio</artifactId>
-									<version>10.2.0</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>commons-codec</groupId>
-									<artifactId>commons-codec</artifactId>
-									<version>1.15</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>commons-io</groupId>
-									<artifactId>commons-io</artifactId>
-									<version>2.7</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>io.jsonwebtoken</groupId>
-									<artifactId>jjwt-api</artifactId>
-									<version>0.11.2</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>io.jsonwebtoken</groupId>
-									<artifactId>jjwt-jackson</artifactId>
-									<version>0.11.2</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>io.jsonwebtoken</groupId>
-									<artifactId>jjwt-impl</artifactId>
-									<version>0.11.2</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>org.apache.httpcomponents</groupId>
-									<artifactId>httpclient</artifactId>
-									<version>4.5.13</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>commons-logging</groupId>
-									<artifactId>commons-logging</artifactId>
-									<version>1.2</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>org.apache.httpcomponents</groupId>
-									<artifactId>httpcore</artifactId>
-									<version>4.4.13</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>com.fasterxml.jackson.core</groupId>
-									<artifactId>jackson-core</artifactId>
-									<version>2.14.0</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>com.fasterxml.jackson.core</groupId>
-									<artifactId>jackson-annotations</artifactId>
-									<version>2.14.0</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>com.fasterxml.jackson.core</groupId>
-									<artifactId>jackson-databind</artifactId>
-									<version>2.14.0</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>com.fasterxml.jackson.datatype</groupId>
-									<artifactId>jackson-datatype-jsr310</artifactId>
-									<version>2.14.0</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>com.fasterxml.jackson.dataformat</groupId>
-									<artifactId>jackson-dataformat-xml</artifactId>
-									<version>2.14.0</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>org.codehaus.woodstox</groupId>
-									<artifactId>stax2-api</artifactId>
-									<version>4.2.1</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>com.fasterxml.woodstox</groupId>
-									<artifactId>woodstox-core</artifactId>
-									<version>6.4.0</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>org.slf4j</groupId>
-									<artifactId>slf4j-api</artifactId>
-									<version>1.7.30</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>com.github.davidmoten</groupId>
-									<artifactId>word-wrap</artifactId>
-									<version>0.1.13</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>com.github.davidmoten</groupId>
-									<artifactId>guava-mini</artifactId>
-									<version>0.1.7</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>com.google.code.gson</groupId>
-									<artifactId>gson</artifactId>
-									<version>2.9.1</version>
-								</artifactItem>		
-								<artifactItem>
-									<groupId>org.openpnp</groupId>
-									<artifactId>opencv</artifactId>
-									<version>3.2.0-0</version>
-								</artifactItem>		
-								<artifactItem>
-									 <groupId>org.bytedeco</groupId>
-   									 <artifactId>javacpp</artifactId>
-    								 <version>1.5.10</version> 
-								</artifactItem>							
-							</artifactItems>
-							<outputDirectory>lib</outputDirectory>
-							<stripVersion>true</stripVersion>
-							<overWriteReleases>true</overWriteReleases>
-							<overWriteSnapshots>true</overWriteSnapshots>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+	<relativePath>../sub.parent.pom.xml</relativePath>
+  </parent>
+  <groupId>za.co.ntier</groupId>
+  <artifactId>za.co.ntier.twilio</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+  <packaging>eclipse-plugin</packaging>
 </project>
