--- a/build.properties
+++ b/build.properties
@@ -1,12 +1,10 @@
-source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
-               .,\
-               OSGI-INF/za.co.ntier.twilio.models.TwilioModelFactory.xml,\
-               OSGI-INF/za.co.ntier.twilio.process.TwilioProcessFactory.xml,\
                lib/commons-codec.jar,\
                lib/commons-io.jar,\
                lib/commons-logging.jar,\
+               lib/gson.jar,\
+               lib/guava-mini.jar,\
                lib/httpclient.jar,\
                lib/httpcore.jar,\
                lib/jackson-annotations.jar,\
@@ -14,17 +12,16 @@ bin.includes = META-INF/,\
                lib/jackson-databind.jar,\
                lib/jackson-dataformat-xml.jar,\
                lib/jackson-datatype-jsr310.jar,\
+               lib/javacpp.jar,\
                lib/jjwt-api.jar,\
                lib/jjwt-impl.jar,\
                lib/jjwt-jackson.jar,\
+               lib/opencv.jar,\
                lib/slf4j-api.jar,\
                lib/stax2-api.jar,\
                lib/twilio.jar,\
                lib/woodstox-core.jar,\
                lib/word-wrap.jar,\
-               lib/guava-mini.jar,\
-               bin/,\
-               lib/opencv.jar,\
-               lib/gson.jar,\
-               lib/javacpp.jar
+               OSGI-INF/,\
+               .
 source.. = src/
