--- a/build.properties
+++ b/build.properties
@@ -1,27 +1,27 @@
 output.. = target/classes/
 bin.includes = META-INF/,\
-               lib/commons-codec.jar,\
-               lib/commons-io.jar,\
-               lib/commons-logging.jar,\
-               lib/gson.jar,\
-               lib/guava-mini.jar,\
-               lib/httpclient.jar,\
-               lib/httpcore.jar,\
-               lib/jackson-annotations.jar,\
-               lib/jackson-core.jar,\
-               lib/jackson-databind.jar,\
-               lib/jackson-dataformat-xml.jar,\
-               lib/jackson-datatype-jsr310.jar,\
-               lib/javacpp.jar,\
-               lib/jjwt-api.jar,\
-               lib/jjwt-impl.jar,\
-               lib/jjwt-jackson.jar,\
-               lib/opencv.jar,\
-               lib/slf4j-api.jar,\
-               lib/stax2-api.jar,\
-               lib/twilio.jar,\
-               lib/woodstox-core.jar,\
-               lib/word-wrap.jar,\
+               libx/commons-codec.jar,\
+               libx/commons-io.jar,\
+               libx/commons-logging.jar,\
+               libx/gson.jar,\
+               libx/guava-mini.jar,\
+               libx/httpclient.jar,\
+               libx/httpcore.jar,\
+               libx/jackson-annotations.jar,\
+               libx/jackson-core.jar,\
+               libx/jackson-databind.jar,\
+               libx/jackson-dataformat-xml.jar,\
+               libx/jackson-datatype-jsr310.jar,\
+               libx/javacpp.jar,\
+               libx/jjwt-api.jar,\
+               libx/jjwt-impl.jar,\
+               libx/jjwt-jackson.jar,\
+               libx/opencv.jar,\
+               libx/slf4j-api.jar,\
+               libx/stax2-api.jar,\
+               libx/twilio.jar,\
+               libx/woodstox-core.jar,\
+               libx/word-wrap.jar,\
                OSGI-INF/,\
                .
 source.. = src/
